Closed Bug 167891 Opened 22 years ago Closed 22 years ago

filter list dialog doesn't match the spec (view log UI and filters after the fact UI)

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2beta

People

(Reporter: sspitzer, Assigned: sspitzer)

References

()

Details

Attachments

(3 files, 1 obsolete file)

filter list dialog doesn't match the spec (view log UI and filters after the 
fact UI)

jglick, can you link to the spec?
accepting 1.2beta
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.2beta
Attached patch patch (obsolete) — Splinter Review
todo:

get enable checkbox working
implement clear log button
spec questons:

1)  should the view log window be a modal dialog.  (we think no, right now it
is.  but I can fix it.)
2)  shoud filter list dialog (or window, if we make it a window) have a cancel?
 how else can you undo all the filter changes?  (you can right now with a cancel)
QA Contact: olgam → laurel
view log UI checked in.

a few open issues, working on them now:

  cropped UI: http://bugzilla.mozilla.org/show_bug.cgi?id=168046
  clear log button doesn't work.
  enable check box shows the right state, but changing state doesn't work.
  handle case where filter log doesn't exist.
>1)Should view log window be a modal dialog (we think no, right now it
>is, but I can fix it).
There is no reason it needs to be modal. It continues to update if left open? 
Any negative consequences of leaving it open?

>2)Should filter list dialog (or window, if we make it a window) have a cancel?
>how else can you undo all the filter changes?  (you can right now with a 
>cancel).

Right now the dialog has OK, Cancel and Help. If you run filters manually, then 
click "Cancel", do the changes made per the filters get undone? If not, we 
shouldn't have Cancel.

3. Adding Status/Progress for manual filtering. Should we add a status bar 
to the bottom of the window like Search Messages or sorta floating in the 
middle like Subscribe? Or just show the status in the Main Mail status bar? 
Generally, "dialogs" don't have status bars. "Windows" can have status bars but 
don't have buttons like "Cancel", "OK", "Help", etc.
> Right now the dialog has OK, Cancel and Help. If you run filters manually, then 
> click "Cancel", do the changes made per the filters get undone? If not, we 
> shouldn't have Cancel.

If you go to the Preferences dialogue, clear the cache and click the Cancel
button, it won't undelete the cache files. This is similar to the situation with
the 'Run Now' function and the filters dialogue.

I think that having Cancel not undo manual filtering would be a lesser evil than
not having a Cancel button at all.
patch landed.

1) now we use <p> instead of <pre> so that our log entries wrap, and fit in the 
window.  (horizontal scrolling is painful)

2) add 10 px border around log view area

3) persist height width of view log window.
the filter list dialog is no longer modal.

there is no close, there is no help button.

I added an OK button to the view log dialog.  (It is modal).

without it, I couldn't close that window on the mac.

marking fixed.

if there other UI issues, let's open new bugs.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
OK using nov24 commercial trunk build: win98, linux rh8, mac OS 10.2
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: