implement "clear log".  make sure the log is there before viewing it, otherwise the user gets a nasty "file not found" alert, like they would on the browser. r/sr=bienvenu.  for bug #167891.